# jgb-ws

./: CMakeLists.txt  README
client/: CMakeLists.txt  client_callback.h  client_factory.h  connection_callback.cpp  connection_callback.h  main.cpp  message.h  protocol_dispatch_callback.h  ws-client.cpp  ws-client.h  ws_client_callback_factory.h  wsapp.cpp  wsapp.h
object/: object_callback.h  sqlite_callback.h
src/: CMakeLists.txt  client_callback.h  client_factory.h  connection_callback.cpp  connection_callback.h  message.h  object_callback.cpp  object_callback.h  object_server_callback.h  protocol-dispatch.cpp  protocol_dispatch_callback.h  server_callback.h  sqlite-app.cpp  sqlite_callback.h  ws-client.cpp  ws-client.h  wsapp.cpp  wsapp.h
test/: CMakeLists.txt  sync-service-client.cpp  sync_service_client.h  test-client.cpp  test-client.h  test-object-callback.cpp  test_client_app.cpp  test_object_callback.h
test/client/: CMakeLists.txt  module.json  service.json  sync_client.json  test-client.cpp  test-client.h  test_client.json  wsapp.json
test/server/: CMakeLists.txt  hello_object_callback.h  module.json  server.db  service.json  sqlite_app.json  test-server.cpp  wsapp.json
